--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "devDependencies": {
+    "babel-loader": "^8.2.3",
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.4",
+    "webpack-cli": "^4.9.2",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
