--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "serve": "^13.0.2",
     "workbox-webpack-plugin": "^6.4.2"
   },
   "devDependencies": {
